; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4client.c_nfs4_find_client_ident.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4client.c_nfs4_find_client_ident.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_client = type { i32 }
%struct.net = type { i32 }
%struct.nfs_net = type { i32, i32 }

@nfs_net_id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nfs_client* @nfs4_find_client_ident(%struct.net* %0, i32 %1) #0 {
  %3 = alloca %struct.net*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.nfs_client*, align 8
  %6 = alloca %struct.nfs_net*, align 8
  store %struct.net* %0, %struct.net** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.net*, %struct.net** %3, align 8
  %8 = load i32, i32* @nfs_net_id, align 4
  %9 = call %struct.nfs_net* @net_generic(%struct.net* %7, i32 %8)
  store %struct.nfs_net* %9, %struct.nfs_net** %6, align 8
  %10 = load %struct.nfs_net*, %struct.nfs_net** %6, align 8
  %11 = getelementptr inbounds %struct.nfs_net, %struct.nfs_net* %10, i32 0, i32 0
  %12 = call i32 @spin_lock(i32* %11)
  %13 = load %struct.nfs_net*, %struct.nfs_net** %6, align 8
  %14 = getelementptr inbounds %struct.nfs_net, %struct.nfs_net* %13, i32 0, i32 1
  %15 = load i32, i32* %4, align 4
  %16 = call %struct.nfs_client* @idr_find(i32* %14, i32 %15)
  store %struct.nfs_client* %16, %struct.nfs_client** %5, align 8
  %17 = load %struct.nfs_client*, %struct.nfs_client** %5, align 8
  %18 = icmp ne %struct.nfs_client* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %2
  %20 = load %struct.nfs_client*, %struct.nfs_client** %5, align 8
  %21 = getelementptr inbounds %struct.nfs_client, %struct.nfs_client* %20, i32 0, i32 0
  %22 = call i32 @refcount_inc(i32* %21)
  br label %23

23:                                               ; preds = %19, %2
  %24 = load %struct.nfs_net*, %struct.nfs_net** %6, align 8
  %25 = getelementptr inbounds %struct.nfs_net, %struct.nfs_net* %24, i32 0, i32 0
  %26 = call i32 @spin_unlock(i32* %25)
  %27 = load %struct.nfs_client*, %struct.nfs_client** %5, align 8
  ret %struct.nfs_client* %27
}

declare dso_local %struct.nfs_net* @net_generic(%struct.net*, i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local %struct.nfs_client* @idr_find(i32*, i32) #1

declare dso_local i32 @refcount_inc(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
